[ :heavy_plus_sign: ] | add: dep - flutter_libserialport (app::gateway)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bloc: ^8.1.3
   http: ^1.2.1
   google_maps_flutter: ^2.6.0
+  flutter_libserialport: ^0.4.0
 
 dev_dependencies:
   flutter_test:
