--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.1
   google_maps_flutter: ^2.6.0
   flutter_libserialport: ^0.4.0
+  sse: ^4.1.5
 
 dev_dependencies:
   flutter_test:
