--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.6.0
   flutter_libserialport: ^0.4.0
   sse: ^4.1.5
+  flutter_client_sse: ^2.0.1
 
 dev_dependencies:
   flutter_test:
