--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_libserialport: ^0.4.0
   sse: ^4.1.5
   flutter_client_sse: ^2.0.1
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
