--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
 sdk.dir=C:\\Users\\Desktop\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\mangu\\Downloads\\flutter
+flutter.sdk=C:\\Users\\Desktop\\Desktop\\Apps\\flutter\\flutter_windows_3.22.2-stable\\flutter
